--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "flask-yandex-app"
+name = "flaskyandexapp"
 version = "0.1.0"
 description = ""
 authors = [
@@ -16,7 +16,8 @@ dependencies = [
     "flask-migrate (>=4.1.0,<5.0.0)",
     "flask-admin (>=1.6.1,<2.0.0)",
     "flask-login (>=0.6.3,<0.7.0)",
-    "flask-restx (>=1.3.0,<2.0.0)"
+    "flask-restx (>=1.3.0,<2.0.0)",
+    "flask-wtf (>=1.2.2,<2.0.0)"
 ]
 
 
